Added mr.developer extension options

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -15,12 +15,16 @@ find-links =
     http://dist.plone.org/release/4.3-latest/
     htp://dist.plone.org/thirdparty/
 
+auto-checkout =
+
 parts =
     instance
 
 eggs =
     experimental.btree
     five.pt
+    ${buildout:auto-checkout}
+
 zcml =
 
 unzip = true
@@ -68,3 +72,5 @@ experimental.btree = 1.1
 five.pt = 2.2.1
 sourcecodegen = 0.6.14
 z3c.pt = 2.2.3
+
+[sources]
