Added plonetheme.amherst package

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,12 +10,11 @@ extensions =
 
 extends =
     http://dist.plone.org/release/4.3-latest/versions.cfg
+    themes.cfg
 
 find-links =
     http://dist.plone.org/release/4.3-latest/
     htp://dist.plone.org/thirdparty/
-
-auto-checkout =
 
 parts =
     instance
@@ -72,5 +71,3 @@ experimental.btree = 1.1
 five.pt = 2.2.1
 sourcecodegen = 0.6.14
 z3c.pt = 2.2.3
-
-[sources]
