--- a/themes.cfg
+++ b/themes.cfg
@@ -6,7 +6,9 @@
 auto-checkout =
 # Diazo themes
     plonetheme.amherst
+    plonetheme.aqueouslight
 
 [sources]
 # Generic Diazo themes
 plonetheme.amherst = git https://github.com/a-pasquale/plonetheme.amherst.git
+plonetheme.aqueouslight = git https://github.com/collective/plonetheme.aqueouslight.git
