Added plonetheme.armadillotec package

--- a/themes.cfg
+++ b/themes.cfg
@@ -7,8 +7,10 @@ auto-checkout =
 # Diazo themes
     plonetheme.amherst
     plonetheme.aqueouslight
+    plonetheme.armadillotec
 
 [sources]
 # Generic Diazo themes
 plonetheme.amherst = git https://github.com/a-pasquale/plonetheme.amherst.git
 plonetheme.aqueouslight = git https://github.com/collective/plonetheme.aqueouslight.git
+plonetheme.armadillotec = git https://github.com/macagua/plonetheme.armadillotec.git
