--- a/themes.cfg
+++ b/themes.cfg
@@ -8,9 +8,11 @@ auto-checkout =
     plonetheme.amherst
     plonetheme.aqueouslight
     plonetheme.armadillotec
+    plonetheme.bananaleaf
 
 [sources]
 # Generic Diazo themes
 plonetheme.amherst = git https://github.com/a-pasquale/plonetheme.amherst.git
 plonetheme.aqueouslight = git https://github.com/collective/plonetheme.aqueouslight.git
 plonetheme.armadillotec = git https://github.com/macagua/plonetheme.armadillotec.git
+plonetheme.bananaleaf = git https://github.com/giacomos/plonetheme.bananaleaf.git
