--- a/themes.cfg
+++ b/themes.cfg
@@ -9,6 +9,7 @@ auto-checkout =
     plonetheme.aqueouslight
     plonetheme.armadillotec
     plonetheme.bananaleaf
+    plonetheme.burned
 
 [sources]
 # Generic Diazo themes
@@ -16,3 +17,4 @@ plonetheme.amherst = git https://github.com/a-pasquale/plonetheme.amherst.git
 plonetheme.aqueouslight = git https://github.com/collective/plonetheme.aqueouslight.git
 plonetheme.armadillotec = git https://github.com/macagua/plonetheme.armadillotec.git
 plonetheme.bananaleaf = git https://github.com/giacomos/plonetheme.bananaleaf.git
+plonetheme.burned = git https://github.com/giacomos/plonetheme.burned.git
