Added plonetheme.codapress package

--- a/themes.cfg
+++ b/themes.cfg
@@ -10,6 +10,7 @@ auto-checkout =
     plonetheme.armadillotec
     plonetheme.bananaleaf
     plonetheme.burned
+    plonetheme.codapress
 
 [sources]
 # Generic Diazo themes
@@ -18,3 +19,4 @@ plonetheme.aqueouslight = git https://github.com/collective/plonetheme.aqueousli
 plonetheme.armadillotec = git https://github.com/macagua/plonetheme.armadillotec.git
 plonetheme.bananaleaf = git https://github.com/giacomos/plonetheme.bananaleaf.git
 plonetheme.burned = git https://github.com/giacomos/plonetheme.burned.git
+plonetheme.codapress = git https://github.com/giacomos/plonetheme.codapress.git
