Added plonetheme.coolblue package

--- a/themes.cfg
+++ b/themes.cfg
@@ -11,6 +11,7 @@ auto-checkout =
     plonetheme.bananaleaf
     plonetheme.burned
     plonetheme.codapress
+    plonetheme.coolblue
 
 [sources]
 # Generic Diazo themes
@@ -20,3 +21,4 @@ plonetheme.armadillotec = git https://github.com/macagua/plonetheme.armadillotec
 plonetheme.bananaleaf = git https://github.com/giacomos/plonetheme.bananaleaf.git
 plonetheme.burned = git https://github.com/giacomos/plonetheme.burned.git
 plonetheme.codapress = git https://github.com/giacomos/plonetheme.codapress.git
+plonetheme.coolblue = git https://github.com/collective/plonetheme.coolblue.git
