Added plonetheme.darkened package

--- a/themes.cfg
+++ b/themes.cfg
@@ -12,6 +12,7 @@ auto-checkout =
     plonetheme.burned
     plonetheme.codapress
     plonetheme.coolblue
+    plonetheme.darkened
 
 [sources]
 # Generic Diazo themes
@@ -22,3 +23,4 @@ plonetheme.bananaleaf = git https://github.com/giacomos/plonetheme.bananaleaf.gi
 plonetheme.burned = git https://github.com/giacomos/plonetheme.burned.git
 plonetheme.codapress = git https://github.com/giacomos/plonetheme.codapress.git
 plonetheme.coolblue = git https://github.com/collective/plonetheme.coolblue.git
+plonetheme.darkened = git https://github.com/giacomos/plonetheme.darkened.git
