Added plonetheme.diazo_sunburst package

--- a/themes.cfg
+++ b/themes.cfg
@@ -13,6 +13,7 @@ auto-checkout =
     plonetheme.codapress
     plonetheme.coolblue
     plonetheme.darkened
+    plonetheme.diazo_sunburst
 
 [sources]
 # Generic Diazo themes
@@ -24,3 +25,4 @@ plonetheme.burned = git https://github.com/giacomos/plonetheme.burned.git
 plonetheme.codapress = git https://github.com/giacomos/plonetheme.codapress.git
 plonetheme.coolblue = git https://github.com/collective/plonetheme.coolblue.git
 plonetheme.darkened = git https://github.com/giacomos/plonetheme.darkened.git
+plonetheme.diazo_sunburst = git https://github.com/aclark4life/plonetheme.diazo_sunburst.git
