Added plonetheme.discovery package

--- a/themes.cfg
+++ b/themes.cfg
@@ -14,6 +14,7 @@ auto-checkout =
     plonetheme.coolblue
     plonetheme.darkened
     plonetheme.diazo_sunburst
+    plonetheme.discovery
 
 [sources]
 # Generic Diazo themes
@@ -26,3 +27,4 @@ plonetheme.codapress = git https://github.com/giacomos/plonetheme.codapress.git
 plonetheme.coolblue = git https://github.com/collective/plonetheme.coolblue.git
 plonetheme.darkened = git https://github.com/giacomos/plonetheme.darkened.git
 plonetheme.diazo_sunburst = git https://github.com/aclark4life/plonetheme.diazo_sunburst.git
+plonetheme.discovery = git https://github.com/giacomos/plonetheme.discovery.git
