--- a/themes.cfg
+++ b/themes.cfg
@@ -15,6 +15,7 @@ auto-checkout =
     plonetheme.darkened
     plonetheme.diazo_sunburst
     plonetheme.discovery
+    plonetheme.earthlingtwo
 
 [sources]
 # Generic Diazo themes
@@ -28,3 +29,4 @@ plonetheme.coolblue = git https://github.com/collective/plonetheme.coolblue.git
 plonetheme.darkened = git https://github.com/giacomos/plonetheme.darkened.git
 plonetheme.diazo_sunburst = git https://github.com/aclark4life/plonetheme.diazo_sunburst.git
 plonetheme.discovery = git https://github.com/giacomos/plonetheme.discovery.git
+plonetheme.earthlingtwo = svn http://svn.plone.org/svn/collective/plonetheme.earthlingtwo/trunk/
