Added plonetheme.evergreen package

--- a/themes.cfg
+++ b/themes.cfg
@@ -16,6 +16,7 @@ auto-checkout =
     plonetheme.diazo_sunburst
     plonetheme.discovery
     plonetheme.earthlingtwo
+    plonetheme.evergreen
 
 [sources]
 # Generic Diazo themes
@@ -30,3 +31,4 @@ plonetheme.darkened = git https://github.com/giacomos/plonetheme.darkened.git
 plonetheme.diazo_sunburst = git https://github.com/aclark4life/plonetheme.diazo_sunburst.git
 plonetheme.discovery = git https://github.com/giacomos/plonetheme.discovery.git
 plonetheme.earthlingtwo = svn http://svn.plone.org/svn/collective/plonetheme.earthlingtwo/trunk/
+plonetheme.evergreen = git https://github.com/giacomos/plonetheme.evergreen.git
