Added plonetheme.flowerbuds package

--- a/themes.cfg
+++ b/themes.cfg
@@ -17,6 +17,7 @@ auto-checkout =
     plonetheme.discovery
     plonetheme.earthlingtwo
     plonetheme.evergreen
+    plonetheme.flowerbuds
 
 [sources]
 # Generic Diazo themes
@@ -32,3 +33,4 @@ plonetheme.diazo_sunburst = git https://github.com/aclark4life/plonetheme.diazo_
 plonetheme.discovery = git https://github.com/giacomos/plonetheme.discovery.git
 plonetheme.earthlingtwo = svn http://svn.plone.org/svn/collective/plonetheme.earthlingtwo/trunk/
 plonetheme.evergreen = git https://github.com/giacomos/plonetheme.evergreen.git
+plonetheme.flowerbuds = git https://github.com/toutpt/plonetheme.flowerbuds.git
