Added plonetheme.freshpick package

--- a/themes.cfg
+++ b/themes.cfg
@@ -18,6 +18,7 @@ auto-checkout =
     plonetheme.earthlingtwo
     plonetheme.evergreen
     plonetheme.flowerbuds
+    plonetheme.freshpick
 
 [sources]
 # Generic Diazo themes
@@ -34,3 +35,4 @@ plonetheme.discovery = git https://github.com/giacomos/plonetheme.discovery.git
 plonetheme.earthlingtwo = svn http://svn.plone.org/svn/collective/plonetheme.earthlingtwo/trunk/
 plonetheme.evergreen = git https://github.com/giacomos/plonetheme.evergreen.git
 plonetheme.flowerbuds = git https://github.com/toutpt/plonetheme.flowerbuds.git
+plonetheme.freshpick = git https://github.com/collective/plonetheme.freshpick.git
