Added plonetheme.gestured package

--- a/themes.cfg
+++ b/themes.cfg
@@ -19,6 +19,7 @@ auto-checkout =
     plonetheme.evergreen
     plonetheme.flowerbuds
     plonetheme.freshpick
+    plonetheme.gestured
 
 [sources]
 # Generic Diazo themes
@@ -36,3 +37,4 @@ plonetheme.earthlingtwo = svn http://svn.plone.org/svn/collective/plonetheme.ear
 plonetheme.evergreen = git https://github.com/giacomos/plonetheme.evergreen.git
 plonetheme.flowerbuds = git https://github.com/toutpt/plonetheme.flowerbuds.git
 plonetheme.freshpick = git https://github.com/collective/plonetheme.freshpick.git
+plonetheme.gestured = git https://github.com/dante1987/plonetheme.gestured.git
