Added plonetheme.grungeera package

--- a/themes.cfg
+++ b/themes.cfg
@@ -20,6 +20,7 @@ auto-checkout =
     plonetheme.flowerbuds
     plonetheme.freshpick
     plonetheme.gestured
+    plonetheme.grungeera
 
 [sources]
 # Generic Diazo themes
@@ -38,3 +39,4 @@ plonetheme.evergreen = git https://github.com/giacomos/plonetheme.evergreen.git
 plonetheme.flowerbuds = git https://github.com/toutpt/plonetheme.flowerbuds.git
 plonetheme.freshpick = git https://github.com/collective/plonetheme.freshpick.git
 plonetheme.gestured = git https://github.com/dante1987/plonetheme.gestured.git
+plonetheme.grungeera = git https://github.com/collective/plonetheme.grungeera.git
