Added plonetheme.keepitsimple package

--- a/themes.cfg
+++ b/themes.cfg
@@ -21,6 +21,7 @@ auto-checkout =
     plonetheme.freshpick
     plonetheme.gestured
     plonetheme.grungeera
+    plonetheme.keepitsimple
 
 [sources]
 # Generic Diazo themes
@@ -40,3 +41,4 @@ plonetheme.flowerbuds = git https://github.com/toutpt/plonetheme.flowerbuds.git
 plonetheme.freshpick = git https://github.com/collective/plonetheme.freshpick.git
 plonetheme.gestured = git https://github.com/dante1987/plonetheme.gestured.git
 plonetheme.grungeera = git https://github.com/collective/plonetheme.grungeera.git
+plonetheme.keepitsimple = git https://github.com/collective/plonetheme.keepitsimple.git
