Added plonetheme.leavesdew package

--- a/themes.cfg
+++ b/themes.cfg
@@ -22,6 +22,7 @@ auto-checkout =
     plonetheme.gestured
     plonetheme.grungeera
     plonetheme.keepitsimple
+    plonetheme.leavesdew
 
 [sources]
 # Generic Diazo themes
@@ -42,3 +43,4 @@ plonetheme.freshpick = git https://github.com/collective/plonetheme.freshpick.gi
 plonetheme.gestured = git https://github.com/dante1987/plonetheme.gestured.git
 plonetheme.grungeera = git https://github.com/collective/plonetheme.grungeera.git
 plonetheme.keepitsimple = git https://github.com/collective/plonetheme.keepitsimple.git
+plonetheme.leavesdew = git https://github.com/giacomos/plonetheme.leavesdew.git
