Added plonetheme.motion package

--- a/themes.cfg
+++ b/themes.cfg
@@ -23,6 +23,7 @@ auto-checkout =
     plonetheme.grungeera
     plonetheme.keepitsimple
     plonetheme.leavesdew
+    plonetheme.motion
 
 [sources]
 # Generic Diazo themes
@@ -44,3 +45,4 @@ plonetheme.gestured = git https://github.com/dante1987/plonetheme.gestured.git
 plonetheme.grungeera = git https://github.com/collective/plonetheme.grungeera.git
 plonetheme.keepitsimple = git https://github.com/collective/plonetheme.keepitsimple.git
 plonetheme.leavesdew = git https://github.com/giacomos/plonetheme.leavesdew.git
+plonetheme.motion = git https://github.com/davilima6/plonetheme.motion.git
