Added plonetheme.redmusic package

--- a/themes.cfg
+++ b/themes.cfg
@@ -24,6 +24,7 @@ auto-checkout =
     plonetheme.keepitsimple
     plonetheme.leavesdew
     plonetheme.motion
+    plonetheme.redmusic
 
 [sources]
 # Generic Diazo themes
@@ -46,3 +47,4 @@ plonetheme.grungeera = git https://github.com/collective/plonetheme.grungeera.gi
 plonetheme.keepitsimple = git https://github.com/collective/plonetheme.keepitsimple.git
 plonetheme.leavesdew = git https://github.com/giacomos/plonetheme.leavesdew.git
 plonetheme.motion = git https://github.com/davilima6/plonetheme.motion.git
+plonetheme.redmusic = git https://github.com/giacomos/plonetheme.redmusic.git
