Added plonetheme.pythonmexico package

--- a/themes.cfg
+++ b/themes.cfg
@@ -25,6 +25,7 @@ auto-checkout =
     plonetheme.leavesdew
     plonetheme.motion
     plonetheme.redmusic
+    plonetheme.pythonmexico
 
 [sources]
 # Generic Diazo themes
@@ -48,3 +49,4 @@ plonetheme.keepitsimple = git https://github.com/collective/plonetheme.keepitsim
 plonetheme.leavesdew = git https://github.com/giacomos/plonetheme.leavesdew.git
 plonetheme.motion = git https://github.com/davilima6/plonetheme.motion.git
 plonetheme.redmusic = git https://github.com/giacomos/plonetheme.redmusic.git
+plonetheme.pythonmexico = git https://github.com/PythonMexico/plonetheme.pythonmexico.git
