Added plonetheme.pollination package

--- a/themes.cfg
+++ b/themes.cfg
@@ -26,6 +26,7 @@ auto-checkout =
     plonetheme.motion
     plonetheme.redmusic
     plonetheme.pythonmexico
+    plonetheme.pollination
 
 [sources]
 # Generic Diazo themes
@@ -50,3 +51,4 @@ plonetheme.leavesdew = git https://github.com/giacomos/plonetheme.leavesdew.git
 plonetheme.motion = git https://github.com/davilima6/plonetheme.motion.git
 plonetheme.redmusic = git https://github.com/giacomos/plonetheme.redmusic.git
 plonetheme.pythonmexico = git https://github.com/PythonMexico/plonetheme.pythonmexico.git
+plonetheme.pollination = svn http://svn.plone.org/svn/collective/plonetheme.pollination/trunk/
