Added plonetheme.plumigreen package

--- a/themes.cfg
+++ b/themes.cfg
@@ -27,6 +27,7 @@ auto-checkout =
     plonetheme.redmusic
     plonetheme.pythonmexico
     plonetheme.pollination
+    plonetheme.plumigreen
 
 [sources]
 # Generic Diazo themes
@@ -52,3 +53,4 @@ plonetheme.motion = git https://github.com/davilima6/plonetheme.motion.git
 plonetheme.redmusic = git https://github.com/giacomos/plonetheme.redmusic.git
 plonetheme.pythonmexico = git https://github.com/PythonMexico/plonetheme.pythonmexico.git
 plonetheme.pollination = svn http://svn.plone.org/svn/collective/plonetheme.pollination/trunk/
+plonetheme.plumigreen = git https://github.com/garbas/plonetheme.plumigreen.git
