Added plonetheme.unbound11 package

--- a/themes.cfg
+++ b/themes.cfg
@@ -28,6 +28,7 @@ auto-checkout =
     plonetheme.pythonmexico
     plonetheme.pollination
     plonetheme.plumigreen
+    plonetheme.unbound11
 
 [sources]
 # Generic Diazo themes
@@ -54,3 +55,4 @@ plonetheme.redmusic = git https://github.com/giacomos/plonetheme.redmusic.git
 plonetheme.pythonmexico = git https://github.com/PythonMexico/plonetheme.pythonmexico.git
 plonetheme.pollination = svn http://svn.plone.org/svn/collective/plonetheme.pollination/trunk/
 plonetheme.plumigreen = git https://github.com/garbas/plonetheme.plumigreen.git
+plonetheme.unbound11 = git https://github.com/a-pasquale/plonetheme.unbound11.git
