Added plonetheme.unilluminated package

--- a/themes.cfg
+++ b/themes.cfg
@@ -29,6 +29,7 @@ auto-checkout =
     plonetheme.pollination
     plonetheme.plumigreen
     plonetheme.unbound11
+    plonetheme.unilluminated
 
 [sources]
 # Generic Diazo themes
@@ -56,3 +57,4 @@ plonetheme.pythonmexico = git https://github.com/PythonMexico/plonetheme.pythonm
 plonetheme.pollination = svn http://svn.plone.org/svn/collective/plonetheme.pollination/trunk/
 plonetheme.plumigreen = git https://github.com/garbas/plonetheme.plumigreen.git
 plonetheme.unbound11 = git https://github.com/a-pasquale/plonetheme.unbound11.git
+plonetheme.unilluminated = git https://github.com/collective/plonetheme.unilluminated.git
