Added plonetheme.transition package

--- a/themes.cfg
+++ b/themes.cfg
@@ -30,6 +30,7 @@ auto-checkout =
     plonetheme.plumigreen
     plonetheme.unbound11
     plonetheme.unilluminated
+    plonetheme.transition
 
 [sources]
 # Generic Diazo themes
@@ -58,3 +59,4 @@ plonetheme.pollination = svn http://svn.plone.org/svn/collective/plonetheme.poll
 plonetheme.plumigreen = git https://github.com/garbas/plonetheme.plumigreen.git
 plonetheme.unbound11 = git https://github.com/a-pasquale/plonetheme.unbound11.git
 plonetheme.unilluminated = git https://github.com/collective/plonetheme.unilluminated.git
+plonetheme.transition = git https://github.com/gyst/plonetheme.transition.git
