Added plonetheme.woodexperience package

--- a/themes.cfg
+++ b/themes.cfg
@@ -31,6 +31,7 @@ auto-checkout =
     plonetheme.unbound11
     plonetheme.unilluminated
     plonetheme.transition
+    plonetheme.woodexperience
 
 [sources]
 # Generic Diazo themes
@@ -60,3 +61,4 @@ plonetheme.plumigreen = git https://github.com/garbas/plonetheme.plumigreen.git
 plonetheme.unbound11 = git https://github.com/a-pasquale/plonetheme.unbound11.git
 plonetheme.unilluminated = git https://github.com/collective/plonetheme.unilluminated.git
 plonetheme.transition = git https://github.com/gyst/plonetheme.transition.git
+plonetheme.woodexperience = git https://github.com/redomino/plonetheme.woodexperience.git
