--- a/themes.cfg
+++ b/themes.cfg
@@ -32,6 +32,7 @@ auto-checkout =
     plonetheme.unilluminated
     plonetheme.transition
     plonetheme.woodexperience
+    plonetheme.yoko
 
 [sources]
 # Generic Diazo themes
@@ -62,3 +63,4 @@ plonetheme.unbound11 = git https://github.com/a-pasquale/plonetheme.unbound11.gi
 plonetheme.unilluminated = git https://github.com/collective/plonetheme.unilluminated.git
 plonetheme.transition = git https://github.com/gyst/plonetheme.transition.git
 plonetheme.woodexperience = git https://github.com/redomino/plonetheme.woodexperience.git
+plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
