Added plonetheme.plumigreen versions

--- a/themes.cfg
+++ b/themes.cfg
@@ -64,3 +64,15 @@ plonetheme.unilluminated = git https://github.com/collective/plonetheme.unillumi
 plonetheme.transition = git https://github.com/gyst/plonetheme.transition.git
 plonetheme.woodexperience = git https://github.com/redomino/plonetheme.woodexperience.git
 plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
+
+[versions]
+
+# plumigreen
+
+# Required by:
+# plonetheme.plumigreen==0.1
+plone.app.themingplugins = 1.0b1
+
+# Required by:
+# plone.app.themingplugins==1.0b1
+z3c.jbot = 0.7.1
