--- a/themes.cfg
+++ b/themes.cfg
@@ -34,6 +34,9 @@ auto-checkout =
     plonetheme.woodexperience
     plonetheme.yoko
 
+# Plone theme skins
+    quintagroup.theme.sunrain
+
 [sources]
 # Generic Diazo themes
 plonetheme.amherst = git https://github.com/a-pasquale/plonetheme.amherst.git
@@ -65,12 +68,16 @@ plonetheme.transition = git https://github.com/gyst/plonetheme.transition.git
 plonetheme.woodexperience = git https://github.com/redomino/plonetheme.woodexperience.git
 plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
 
+# Plone theme classic
+quintagroup.theme.sunrain = git https://github.com/quintagroup/quintagroup.theme.sunrain.git
+
 [versions]
 
-# plumigreen
+# plumigreen, quintagroup.theme.sunrain
 
 # Required by:
 # plonetheme.plumigreen==0.1
+# quintagroup.theme.sunrain==6.2
 plone.app.themingplugins = 1.0b1
 
 # Required by:
