Added quintagroup.theme.schools package

--- a/themes.cfg
+++ b/themes.cfg
@@ -36,6 +36,7 @@ auto-checkout =
 
 # Plone theme skins
     quintagroup.theme.sunrain
+    quintagroup.theme.schools
 
 [sources]
 # Generic Diazo themes
@@ -70,6 +71,7 @@ plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
 
 # Plone theme classic
 quintagroup.theme.sunrain = git https://github.com/quintagroup/quintagroup.theme.sunrain.git
+quintagroup.theme.schools = git https://github.com/quintagroup/quintagroup.theme.schools.git
 
 [versions]
 
