--- a/themes.cfg
+++ b/themes.cfg
@@ -37,6 +37,7 @@ auto-checkout =
 # Plone theme skins
     quintagroup.theme.sunrain
     quintagroup.theme.schools
+    quintagroup.theme.pythonreel
 
 [sources]
 # Generic Diazo themes
@@ -72,6 +73,7 @@ plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
 # Plone theme classic
 quintagroup.theme.sunrain = git https://github.com/quintagroup/quintagroup.theme.sunrain.git
 quintagroup.theme.schools = git https://github.com/quintagroup/quintagroup.theme.schools.git
+quintagroup.theme.pythonreel = git https://github.com/quintagroup/quintagroup.theme.pythonreel.git
 
 [versions]
 
