--- a/themes.cfg
+++ b/themes.cfg
@@ -39,6 +39,9 @@ auto-checkout =
     quintagroup.theme.schools
     quintagroup.theme.pythonreel
 
+# Custom Diazo themes
+    plonetheme.changecenter
+
 [sources]
 # Generic Diazo themes
 plonetheme.amherst = git https://github.com/a-pasquale/plonetheme.amherst.git
@@ -75,8 +78,10 @@ quintagroup.theme.sunrain = git https://github.com/quintagroup/quintagroup.theme
 quintagroup.theme.schools = git https://github.com/quintagroup/quintagroup.theme.schools.git
 quintagroup.theme.pythonreel = git https://github.com/quintagroup/quintagroup.theme.pythonreel.git
 
-[versions]
+# Custom themes
+plonetheme.changecenter = git https://github.com/a-pasquale/plonetheme.changecenter.git
 
+[versions]
 # plumigreen, quintagroup.theme.sunrain
 
 # Required by:
