Added plonetheme.aclark_twitter package

--- a/themes.cfg
+++ b/themes.cfg
@@ -38,6 +38,7 @@ auto-checkout =
     quintagroup.theme.sunrain
     quintagroup.theme.schools
     quintagroup.theme.pythonreel
+    plonetheme.aclark_twitter
 
 # Custom Diazo themes
     plonetheme.changecenter
@@ -77,8 +78,9 @@ plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
 quintagroup.theme.sunrain = git https://github.com/quintagroup/quintagroup.theme.sunrain.git
 quintagroup.theme.schools = git https://github.com/quintagroup/quintagroup.theme.schools.git
 quintagroup.theme.pythonreel = git https://github.com/quintagroup/quintagroup.theme.pythonreel.git
+plonetheme.aclark_twitter = git https://github.com/collective/plonetheme.aclark_twitter.git
 
-# Custom themes
+# Custom Diazo themes
 plonetheme.changecenter = git https://github.com/a-pasquale/plonetheme.changecenter.git
 
 [versions]
