Added plonetheme.unam package

--- a/themes.cfg
+++ b/themes.cfg
@@ -42,6 +42,7 @@ auto-checkout =
 
 # Custom Diazo themes
     plonetheme.changecenter
+    plonetheme.unam
 
 [sources]
 # Generic Diazo themes
@@ -82,6 +83,7 @@ plonetheme.aclark_twitter = git https://github.com/collective/plonetheme.aclark_
 
 # Custom Diazo themes
 plonetheme.changecenter = git https://github.com/a-pasquale/plonetheme.changecenter.git
+plonetheme.unam = git https://github.com/imatem/plonetheme.unam.git
 
 [versions]
 # plumigreen, quintagroup.theme.sunrain
