Added plonetheme.drupal package

--- a/themes.cfg
+++ b/themes.cfg
@@ -15,6 +15,7 @@ auto-checkout =
     plonetheme.darkened
     plonetheme.diazo_sunburst
     plonetheme.discovery
+    plonetheme.drupal
     plonetheme.earthlingtwo
     plonetheme.evergreen
     plonetheme.flowerbuds
@@ -80,6 +81,7 @@ quintagroup.theme.sunrain = git https://github.com/quintagroup/quintagroup.theme
 quintagroup.theme.schools = git https://github.com/quintagroup/quintagroup.theme.schools.git
 quintagroup.theme.pythonreel = git https://github.com/quintagroup/quintagroup.theme.pythonreel.git
 plonetheme.aclark_twitter = git https://github.com/collective/plonetheme.aclark_twitter.git
+plonetheme.drupal = git https://github.com/sylvainb/plonetheme.drupal.git
 
 # Custom Diazo themes
 plonetheme.changecenter = git https://github.com/a-pasquale/plonetheme.changecenter.git
