Added plonetheme.trantor package

--- a/themes.cfg
+++ b/themes.cfg
@@ -40,6 +40,7 @@ auto-checkout =
     quintagroup.theme.pythonreel
     plonetheme.aclark_twitter
     plonetheme.drupal
+    plonetheme.trantor
 
 # Custom Diazo themes
     plonetheme.changecenter
@@ -82,6 +83,7 @@ quintagroup.theme.schools = git https://github.com/quintagroup/quintagroup.theme
 quintagroup.theme.pythonreel = git https://github.com/quintagroup/quintagroup.theme.pythonreel.git
 plonetheme.aclark_twitter = git https://github.com/collective/plonetheme.aclark_twitter.git
 plonetheme.drupal = git https://github.com/sylvainb/plonetheme.drupal.git
+plonetheme.trantor = git https://github.com/tristanlt/plonetheme.trantor.git
 
 # Custom Diazo themes
 plonetheme.changecenter = git https://github.com/a-pasquale/plonetheme.changecenter.git
@@ -98,3 +100,8 @@ plone.app.themingplugins = 1.0b1
 # Required by:
 # plone.app.themingplugins==1.0b1
 z3c.jbot = 0.7.1
+
+# trantor
+# Required by:
+# plonetheme.trantor==1.0
+webcouturier.dropdownmenu = 2.3.1
