Added plonetheme.zopeorg package

--- a/themes.cfg
+++ b/themes.cfg
@@ -45,6 +45,7 @@ auto-checkout =
 # Custom Diazo themes
     plonetheme.changecenter
     plonetheme.unam
+    plonetheme.zopeorg
 
 [sources]
 # Generic Diazo themes
@@ -88,6 +89,7 @@ plonetheme.trantor = git https://github.com/tristanlt/plonetheme.trantor.git
 # Custom Diazo themes
 plonetheme.changecenter = git https://github.com/a-pasquale/plonetheme.changecenter.git
 plonetheme.unam = git https://github.com/imatem/plonetheme.unam.git
+plonetheme.zopeorg = git https://github.com/d2m/plonetheme.zopeorg.git
 
 [versions]
 # plumigreen, quintagroup.theme.sunrain
@@ -105,3 +107,31 @@ z3c.jbot = 0.7.1
 # Required by:
 # plonetheme.trantor==1.0
 webcouturier.dropdownmenu = 2.3.1
+
+# plonetheme.zopeorg
+odict = 1.5.1
+
+# Required by:
+# collective.collage.portlets==0.3.1
+# plonetheme.zopeorg==1.0-dev
+Products.Collage = 1.3.10
+
+# Required by:
+# plonetheme.zopeorg==1.0-dev
+collective.collage.portlets = 0.3.1
+
+# Required by:
+# plonetheme.zopeorg==1.0-dev
+collective.setuphandlertools = 1.0b4
+
+# Required by:
+# plonetheme.zopeorg==1.0-dev
+collective.teaser = 2.2
+
+# Required by:
+# collective.teaser==2.2
+node = 0.9.11
+
+# Required by:
+# node==0.9.11
+plumber = 1.2
