Added quintagroup.theme.lite package

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -23,6 +23,7 @@ eggs =
     experimental.btree
     five.pt
     ${buildout:auto-checkout}
+    quintagroup.theme.lite
 
 zcml =
 
@@ -71,3 +72,6 @@ experimental.btree = 1.1
 five.pt = 2.2.1
 sourcecodegen = 0.6.14
 z3c.pt = 2.2.3
+
+# Plone theme
+quintagroup.theme.lite = 6.0.4
