--- a/buildout.cfg
+++ b/buildout.cfg
@@ -23,6 +23,7 @@ eggs =
     experimental.btree
     five.pt
     ${buildout:auto-checkout}
+    quintagroup.theme.estatelite
     quintagroup.theme.lite
 
 zcml =
@@ -74,4 +75,5 @@ sourcecodegen = 0.6.14
 z3c.pt = 2.2.3
 
 # Plone theme
+quintagroup.theme.estatelite = 6.0.6
 quintagroup.theme.lite = 6.0.4
