Added quintagroup.theme.techlight package

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,6 +25,7 @@ eggs =
     ${buildout:auto-checkout}
     quintagroup.theme.estatelite
     quintagroup.theme.lite
+    quintagroup.theme.techlight
 
 zcml =
 
@@ -77,3 +78,4 @@ z3c.pt = 2.2.3
 # Plone theme
 quintagroup.theme.estatelite = 6.0.6
 quintagroup.theme.lite = 6.0.4
+quintagroup.theme.techlight = 6.0.6
