Added quintagroup.theme.whiteblack package

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -26,6 +26,7 @@ eggs =
     quintagroup.theme.estatelite
     quintagroup.theme.lite
     quintagroup.theme.techlight
+    quintagroup.theme.whiteblack
 
 zcml =
 
@@ -79,3 +80,4 @@ z3c.pt = 2.2.3
 quintagroup.theme.estatelite = 6.0.6
 quintagroup.theme.lite = 6.0.4
 quintagroup.theme.techlight = 6.0.6
+quintagroup.theme.whiteblack = 6.0.3
