Moved eggs plone theme from buildout.cfg to themes.cfg config

--- a/themes.cfg
+++ b/themes.cfg
@@ -47,6 +47,12 @@ auto-checkout =
     plonetheme.unam
     plonetheme.zopeorg
 
+eggs = 
+    quintagroup.theme.estatelite
+    quintagroup.theme.lite
+    quintagroup.theme.techlight
+    quintagroup.theme.whiteblack
+
 [sources]
 # Generic Diazo themes
 plonetheme.amherst = git https://github.com/a-pasquale/plonetheme.amherst.git
@@ -92,6 +98,13 @@ plonetheme.unam = git https://github.com/imatem/plonetheme.unam.git
 plonetheme.zopeorg = git https://github.com/d2m/plonetheme.zopeorg.git
 
 [versions]
+
+# Plone skins theme
+quintagroup.theme.estatelite = 6.0.6
+quintagroup.theme.lite = 6.0.4
+quintagroup.theme.techlight = 6.0.6
+quintagroup.theme.whiteblack = 6.0.3
+
 # plumigreen, quintagroup.theme.sunrain
 
 # Required by:
