--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,6 +11,7 @@ extensions =
 extends =
     http://dist.plone.org/release/4.3-latest/versions.cfg
     themes.cfg
+#    themming-tools.cfg
 
 find-links =
     http://dist.plone.org/release/4.3-latest/
@@ -19,14 +20,10 @@ find-links =
 parts =
     instance
 
-eggs =
+eggs +=
     experimental.btree
     five.pt
     ${buildout:auto-checkout}
-    quintagroup.theme.estatelite
-    quintagroup.theme.lite
-    quintagroup.theme.techlight
-    quintagroup.theme.whiteblack
 
 zcml =
 
@@ -75,9 +72,3 @@ experimental.btree = 1.1
 five.pt = 2.2.1
 sourcecodegen = 0.6.14
 z3c.pt = 2.2.3
-
-# Plone theme
-quintagroup.theme.estatelite = 6.0.6
-quintagroup.theme.lite = 6.0.4
-quintagroup.theme.techlight = 6.0.6
-quintagroup.theme.whiteblack = 6.0.3
