Added initial themming tools like collective.fontawesome and medialog.googlefonts

--- a/themes.cfg
+++ b/themes.cfg
@@ -4,7 +4,7 @@
 [buildout]
 
 auto-checkout =
-# Diazo themes
+############### Diazo themes
     plonetheme.amherst
     plonetheme.aqueouslight
     plonetheme.armadillotec
@@ -34,7 +34,7 @@ auto-checkout =
     plonetheme.woodexperience
     plonetheme.yoko
 
-# Plone theme skins
+############## Plone theme skins
     quintagroup.theme.sunrain
     quintagroup.theme.schools
     quintagroup.theme.pythonreel
@@ -42,16 +42,23 @@ auto-checkout =
     plonetheme.drupal
     plonetheme.trantor
 
-# Custom Diazo themes
+########### Custom Diazo themes
     plonetheme.changecenter
     plonetheme.unam
     plonetheme.zopeorg
+
+################ Themming tools
+#    medialog.googlefonts
 
 eggs = 
     quintagroup.theme.estatelite
     quintagroup.theme.lite
     quintagroup.theme.techlight
     quintagroup.theme.whiteblack
+    
+################# Themming tools
+    collective.fontawesome
+    medialog.googlefonts
 
 [sources]
 # Generic Diazo themes
@@ -97,9 +104,13 @@ plonetheme.changecenter = git https://github.com/a-pasquale/plonetheme.changecen
 plonetheme.unam = git https://github.com/imatem/plonetheme.unam.git
 plonetheme.zopeorg = git https://github.com/d2m/plonetheme.zopeorg.git
 
+# Themming tools
+medialog.googlefonts = svn http://svn.plone.org/svn/collective/medialog.googlefonts/trunk/
+#ploomcake.theme_collection_accessibility = git https://github.com/ploomcake/ploomcake.theme_collection_accessibility.git
+
 [versions]
 
-# Plone skins theme
+################## Plone skins theme
 quintagroup.theme.estatelite = 6.0.6
 quintagroup.theme.lite = 6.0.4
 quintagroup.theme.techlight = 6.0.6
@@ -148,3 +159,7 @@ node = 0.9.11
 # Required by:
 # node==0.9.11
 plumber = 1.2
+
+#################### Themming tools
+collective.fontawesome = 1.0.2
+medialog.googlefonts = 1.3.1
