Added collective.cover package as theming tool

--- a/themes.cfg
+++ b/themes.cfg
@@ -47,7 +47,7 @@ auto-checkout =
     plonetheme.unam
     plonetheme.zopeorg
 
-################ Themming tools
+################ Theming tools
 #    medialog.googlefonts
 
 eggs = 
@@ -56,7 +56,8 @@ eggs =
     quintagroup.theme.techlight
     quintagroup.theme.whiteblack
     
-################# Themming tools
+################# Theming tools
+    collective.cover
     collective.fontawesome
     medialog.googlefonts
 
@@ -104,7 +105,7 @@ plonetheme.changecenter = git https://github.com/a-pasquale/plonetheme.changecen
 plonetheme.unam = git https://github.com/imatem/plonetheme.unam.git
 plonetheme.zopeorg = git https://github.com/d2m/plonetheme.zopeorg.git
 
-# Themming tools
+# Theming tools
 medialog.googlefonts = svn http://svn.plone.org/svn/collective/medialog.googlefonts/trunk/
 #ploomcake.theme_collection_accessibility = git https://github.com/ploomcake/ploomcake.theme_collection_accessibility.git
 
@@ -160,6 +161,25 @@ node = 0.9.11
 # node==0.9.11
 plumber = 1.2
 
-#################### Themming tools
+#################### Theming tools
 collective.fontawesome = 1.0.2
 medialog.googlefonts = 1.3.1
+
+collective.cover = 1.0a5
+plone.tiles = 1.2
+
+# Required by:
+# collective.cover==1.0a5
+collective.js.galleria = 1.2.5
+
+# Required by:
+# collective.cover==1.0a5
+plone.app.blocks = 1.1.1
+
+# Required by:
+# plone.app.tiles==1.0.1
+plone.app.drafts = 1.0a2
+
+# Required by:
+# collective.cover==1.0a5
+plone.app.tiles = 1.0.1
