Added Products.Doormat package as theming tool

--- a/themes.cfg
+++ b/themes.cfg
@@ -49,6 +49,7 @@ auto-checkout =
 
 ################ Theming tools
 #    medialog.googlefonts
+    Products.Doormat
 
 eggs = 
     quintagroup.theme.estatelite
@@ -107,6 +108,7 @@ plonetheme.zopeorg = git https://github.com/d2m/plonetheme.zopeorg.git
 
 # Theming tools
 medialog.googlefonts = svn http://svn.plone.org/svn/collective/medialog.googlefonts/trunk/
+Products.Doormat = git https://github.com/collective/Products.Doormat.git
 #ploomcake.theme_collection_accessibility = git https://github.com/ploomcake/ploomcake.theme_collection_accessibility.git
 
 [versions]
