--- a/themes.cfg
+++ b/themes.cfg
@@ -64,14 +64,14 @@ eggs =
 
 [sources]
 # Generic Diazo themes
-plonetheme.amherst = git https://github.com/a-pasquale/plonetheme.amherst.git
+plonetheme.amherst = git https://github.com/collective/plonetheme.amherst.git
 plonetheme.aqueouslight = git https://github.com/collective/plonetheme.aqueouslight.git
 plonetheme.armadillotec = git https://github.com/macagua/plonetheme.armadillotec.git
-plonetheme.bananaleaf = git https://github.com/giacomos/plonetheme.bananaleaf.git
-plonetheme.burned = git https://github.com/giacomos/plonetheme.burned.git
-plonetheme.codapress = git https://github.com/giacomos/plonetheme.codapress.git
+plonetheme.bananaleaf = git https://github.com/collective/plonetheme.bananaleaf.git
+plonetheme.burned = git https://github.com/collective/plonetheme.burned.git
+plonetheme.codapress = git https://github.com/collective/plonetheme.codapress.git
 plonetheme.coolblue = git https://github.com/collective/plonetheme.coolblue.git
-plonetheme.darkened = git https://github.com/giacomos/plonetheme.darkened.git
+plonetheme.darkened = git https://github.com/collective/plonetheme.darkened.git
 plonetheme.diazo_sunburst = git https://github.com/aclark4life/plonetheme.diazo_sunburst.git
 plonetheme.discovery = git https://github.com/giacomos/plonetheme.discovery.git
 plonetheme.earthlingtwo = svn http://svn.plone.org/svn/collective/plonetheme.earthlingtwo/trunk/
