Added Others resources for Plone themes section and Reference section

--- a/themes.cfg
+++ b/themes.cfg
@@ -1,6 +1,3 @@
-# OJO ESTE > http://blog.aclark.net/2010/11/04/a-report-on-plonetheme/ 
-# http://blog.aclark.net/2011/05/27/quotnewquot-plone-theming-has-arrived/
-# http://blog.aclark.net/2012/09/24/diazo-themes-revisited/
 [buildout]
 
 auto-checkout =
@@ -93,7 +90,7 @@ plonetheme.transition = git https://github.com/gyst/plonetheme.transition.git
 plonetheme.woodexperience = git https://github.com/redomino/plonetheme.woodexperience.git
 plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
 
-# Plone theme classic
+# Plone theme skins
 quintagroup.theme.sunrain = git https://github.com/quintagroup/quintagroup.theme.sunrain.git
 quintagroup.theme.schools = git https://github.com/quintagroup/quintagroup.theme.schools.git
 quintagroup.theme.pythonreel = git https://github.com/quintagroup/quintagroup.theme.pythonreel.git
