--- a/themes.cfg
+++ b/themes.cfg
@@ -16,7 +16,7 @@ auto-checkout =
     plonetheme.evergreen
     plonetheme.flowerbuds
     plonetheme.freshpick
-    plonetheme.gestured
+#    plonetheme.gestured
     plonetheme.grungeera
     plonetheme.keepitsimple
     plonetheme.leavesdew
@@ -75,7 +75,7 @@ plonetheme.earthlingtwo = svn http://svn.plone.org/svn/collective/plonetheme.ear
 plonetheme.evergreen = git https://github.com/giacomos/plonetheme.evergreen.git
 plonetheme.flowerbuds = git https://github.com/toutpt/plonetheme.flowerbuds.git
 plonetheme.freshpick = git https://github.com/collective/plonetheme.freshpick.git
-plonetheme.gestured = git https://github.com/dante1987/plonetheme.gestured.git
+#plonetheme.gestured = git https://github.com/dante1987/plonetheme.gestured.git
 plonetheme.grungeera = git https://github.com/collective/plonetheme.grungeera.git
 plonetheme.keepitsimple = git https://github.com/collective/plonetheme.keepitsimple.git
 plonetheme.leavesdew = git https://github.com/giacomos/plonetheme.leavesdew.git
