Added chalkboardtheme_plone product #2

--- a/themes.cfg
+++ b/themes.cfg
@@ -2,6 +2,7 @@
 
 auto-checkout =
 ############### Diazo themes
+#    chalkboardtheme_plone
     plonetheme.amherst
     plonetheme.aqueouslight
     plonetheme.armadillotec
@@ -61,6 +62,7 @@ eggs =
 
 [sources]
 # Generic Diazo themes
+#chalkboardtheme_plone = git https://github.com/tkimnguyen/chalkboardtheme_plone.git
 plonetheme.amherst = git https://github.com/collective/plonetheme.amherst.git
 plonetheme.aqueouslight = git https://github.com/collective/plonetheme.aqueouslight.git
 plonetheme.armadillotec = git https://github.com/macagua/plonetheme.armadillotec.git
