Added beyondskins products #1

--- a/themes.cfg
+++ b/themes.cfg
@@ -32,6 +32,17 @@ auto-checkout =
     plonetheme.woodexperience
     plonetheme.yoko
 
+#    beyondskins.brasilia
+#    beyondskins.phantasmagoria
+#    beyondskins.happy
+#    beyondskins.colors
+#    beyondskins.sports
+#    beyondskins.sunflower
+#    beyondskins.beyondskins
+    beyondskins.responsive
+#    beyondskins.lostkatana
+#    beyondskins.minimalist
+
 ############## Plone theme skins
     quintagroup.theme.sunrain
     quintagroup.theme.schools
@@ -91,6 +102,18 @@ plonetheme.unilluminated = git https://github.com/collective/plonetheme.unillumi
 plonetheme.transition = git https://github.com/gyst/plonetheme.transition.git
 plonetheme.woodexperience = git https://github.com/redomino/plonetheme.woodexperience.git
 plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
+
+# Beyondskins Diazo themes
+#beyondskins.brasilia = git https://github.com/simplesconsultoria/beyondskins.brasilia.git
+#beyondskins.phantasmagoria = git https://github.com/simplesconsultoria/beyondskins.phantasmagoria.git
+#beyondskins.happy = git https://github.com/simplesconsultoria/beyondskins.happy.git
+#beyondskins.colors = git https://github.com/simplesconsultoria/beyondskins.colors.git
+#beyondskins.sports = git https://github.com/simplesconsultoria/beyondskins.sports.git
+#beyondskins.sunflower = git https://github.com/simplesconsultoria/beyondskins.sunflower.git
+#beyondskins.beyondskins = git https://github.com/simplesconsultoria/beyondskins.beyondskins.git
+beyondskins.responsive = git https://github.com/simplesconsultoria/beyondskins.responsive.git
+#beyondskins.lostkatana = git https://github.com/simplesconsultoria/beyondskins.lostkatana.git
+#beyondskins.minimalist = git https://github.com/simplesconsultoria/beyondskins.minimalist.git
 
 # Plone theme skins
 quintagroup.theme.sunrain = git https://github.com/quintagroup/quintagroup.theme.sunrain.git
