--- a/themes.cfg
+++ b/themes.cfg
@@ -43,6 +43,39 @@ auto-checkout =
 #    beyondskins.lostkatana
 #    beyondskins.minimalist
 
+# Diazo theme with CSS Framework
+    diazoframework.amazium
+    diazoframework.baseline
+    diazoframework.bootstrap
+    diazoframework.foundation
+    diazoframework.goldilocks
+    diazoframework.kube
+    diazoframework.plone
+    diazoframework.purecss
+    diazoframework.skeleton
+
+#    diazotheme.frameworks
+    diazotheme.framework.cascade
+    diazotheme.framework.gumby
+    diazotheme.framework.ivory
+    diazotheme.framework.metro
+    diazotheme.framework.wirefy
+    diazotheme.framework.yaml4
+
+    diazotheme.amazium
+    diazotheme.baseline
+    diazotheme.bootstrap
+    diazotheme.bootswatch
+#    diazotheme.default
+    diazotheme.foundation
+    diazotheme.goldilocks
+    diazotheme.initializr
+    diazotheme.kube
+    diazotheme.plone
+    diazotheme.purecss
+    diazotheme.skeleton
+    diazotheme.startup
+
 ############## Plone theme skins
     quintagroup.theme.sunrain
     quintagroup.theme.schools
@@ -114,6 +147,41 @@ plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
 beyondskins.responsive = git https://github.com/simplesconsultoria/beyondskins.responsive.git
 #beyondskins.lostkatana = git https://github.com/simplesconsultoria/beyondskins.lostkatana.git
 #beyondskins.minimalist = git https://github.com/simplesconsultoria/beyondskins.minimalist.git
+
+# Diazo theme with CSS Framework
+diazotheme.amazium = git https://github.com/TH-code/diazotheme.amazium.git
+diazotheme.baseline = git https://github.com/TH-code/diazotheme.baseline.git
+diazotheme.bootstrap = git https://github.com/TH-code/diazotheme.bootstrap.git
+diazotheme.bootswatch = git https://github.com/TH-code/diazotheme.bootswatch.git
+#diazotheme.default = git https://github.com/TH-code/diazotheme.default.git
+diazotheme.foundation = git https://github.com/TH-code/diazotheme.foundation.git
+diazotheme.goldilocks = git https://github.com/TH-code/diazotheme.goldilocks.git
+diazotheme.initializr = git https://github.com/TH-code/diazotheme.initializr.git
+diazotheme.kube = git https://github.com/TH-code/diazotheme.kube.git
+diazotheme.plone = git https://github.com/TH-code/diazotheme.plone.git
+diazotheme.purecss = git https://github.com/TH-code/diazotheme.purecss.git
+diazotheme.skeleton = git https://github.com/TH-code/diazotheme.skeleton.git
+diazotheme.startup = git https://github.com/TH-code/diazotheme.startup.git
+
+# CSS Framework as Diazo resources
+diazoframework.amazium = git https://github.com/TH-code/diazoframework.amazium.git
+diazoframework.baseline = git https://github.com/TH-code/diazoframework.baseline.git
+diazoframework.bootstrap = git https://github.com/TH-code/diazoframework.bootstrap.git
+diazoframework.foundation = git https://github.com/TH-code/diazoframework.foundation.git
+diazoframework.goldilocks = git https://github.com/TH-code/diazoframework.goldilocks.git
+diazoframework.kube = git https://github.com/TH-code/diazoframework.kube.git
+diazoframework.plone = git https://github.com/TH-code/diazoframework.plone.git
+diazoframework.purecss = git https://github.com/TH-code/diazoframework.purecss.git
+diazoframework.skeleton = git https://github.com/TH-code/diazoframework.skeleton.git
+
+# Others CSS Framework as Diazo resources
+#diazotheme.frameworks = git https://github.com/TH-code/diazotheme.frameworks.git
+diazotheme.framework.cascade = git https://github.com/TH-code/diazotheme.framework.cascade.git
+diazotheme.framework.gumby = git https://github.com/TH-code/diazotheme.framework.gumby.git
+diazotheme.framework.ivory = git https://github.com/TH-code/diazotheme.framework.ivory.git
+diazotheme.framework.metro = git https://github.com/TH-code/diazotheme.framework.metro.git
+diazotheme.framework.wirefy = git https://github.com/TH-code/diazotheme.framework.wirefy.git
+diazotheme.framework.yaml4 = git https://github.com/TH-code/diazotheme.framework.yaml4.git
 
 # Plone theme skins
 quintagroup.theme.sunrain = git https://github.com/quintagroup/quintagroup.theme.sunrain.git
