--- a/themes.cfg
+++ b/themes.cfg
@@ -257,15 +257,23 @@ plumber = 1.2
 collective.fontawesome = 1.0.2
 medialog.googlefonts = 1.3.1
 
-collective.cover = 1.0a5
+collective.cover = 1.0a9
 plone.tiles = 1.2
 
 # Required by:
-# collective.cover==1.0a5
+# collective.cover==1.0a9
+collective.js.bootstrap = 2.3.1.1
+
+# Required by:
+# collective.cover==1.0a9
 collective.js.galleria = 1.2.5
 
 # Required by:
-# collective.cover==1.0a5
+# collective.cover==1.0a9
+plone.api = 1.2.1
+
+# Required by:
+# collective.cover==1.0a9
 plone.app.blocks = 1.1.1
 
 # Required by:
@@ -273,5 +281,5 @@ plone.app.blocks = 1.1.1
 plone.app.drafts = 1.0a2
 
 # Required by:
-# collective.cover==1.0a5
+# collective.cover==1.0a9
 plone.app.tiles = 1.0.1
