--- a/themes.cfg
+++ b/themes.cfg
@@ -69,12 +69,12 @@ auto-checkout =
 #    diazotheme.default
     diazotheme.foundation
     diazotheme.goldilocks
-    diazotheme.initializr
+#    diazotheme.initializr
     diazotheme.kube
     diazotheme.plone
     diazotheme.purecss
     diazotheme.skeleton
-    diazotheme.startup
+#    diazotheme.startup
 
 ############## Plone theme skins
     quintagroup.theme.sunrain
@@ -156,12 +156,12 @@ diazotheme.bootswatch = git https://github.com/TH-code/diazotheme.bootswatch.git
 #diazotheme.default = git https://github.com/TH-code/diazotheme.default.git
 diazotheme.foundation = git https://github.com/TH-code/diazotheme.foundation.git
 diazotheme.goldilocks = git https://github.com/TH-code/diazotheme.goldilocks.git
-diazotheme.initializr = git https://github.com/TH-code/diazotheme.initializr.git
+#diazotheme.initializr = git https://github.com/TH-code/diazotheme.initializr.git
 diazotheme.kube = git https://github.com/TH-code/diazotheme.kube.git
 diazotheme.plone = git https://github.com/TH-code/diazotheme.plone.git
 diazotheme.purecss = git https://github.com/TH-code/diazotheme.purecss.git
 diazotheme.skeleton = git https://github.com/TH-code/diazotheme.skeleton.git
-diazotheme.startup = git https://github.com/TH-code/diazotheme.startup.git
+#diazotheme.startup = git https://github.com/TH-code/diazotheme.startup.git
 
 # CSS Framework as Diazo resources
 diazoframework.amazium = git https://github.com/TH-code/diazoframework.amazium.git
