Added collective.behavior.localskin and collective.behavior.localdiazo products

--- a/themes.cfg
+++ b/themes.cfg
@@ -103,6 +103,8 @@ eggs =
     collective.cover
     collective.fontawesome
     medialog.googlefonts
+    collective.behavior.localdiazo
+    collective.behavior.localskin
 
 [sources]
 # Generic Diazo themes
@@ -283,3 +285,11 @@ plone.app.drafts = 1.0a2
 # Required by:
 # collective.cover==1.0a9
 plone.app.tiles = 1.0.1
+
+collective.behavior.localdiazo = 1.0b3
+collective.behavior.localskin = 0.9.2
+
+# Required by:
+# collective.behavior.localdiazo==1.0b3
+# collective.behavior.localskin==0.9.2
+collective.behavior.localregistry = 1.0b2
