Added jquery.mobile support #5

--- a/themes.cfg
+++ b/themes.cfg
@@ -106,6 +106,12 @@ eggs =
     collective.behavior.localdiazo
     collective.behavior.localskin
 
+################# Mobile Theming tools
+    zettwerk.mobiletheming
+
+################# jQueryMobile's themeroller tools
+    zettwerk.mobile
+
 [sources]
 # Generic Diazo themes
 #chalkboardtheme_plone = git https://github.com/tkimnguyen/chalkboardtheme_plone.git
@@ -293,3 +299,6 @@ collective.behavior.localskin = 0.9.2
 # collective.behavior.localdiazo==1.0b3
 # collective.behavior.localskin==0.9.2
 collective.behavior.localregistry = 1.0b2
+
+zettwerk.mobile = 0.2.1
+zettwerk.mobiletheming = 0.2
