Added JQuery.ui themeroller tool

--- a/themes.cfg
+++ b/themes.cfg
@@ -106,6 +106,9 @@ eggs =
     collective.behavior.localdiazo
     collective.behavior.localskin
 
+################# JQuery.ui's themeroller tools
+    zettwerk.ui
+
 ################# Mobile Theming tools
     zettwerk.mobiletheming
 
@@ -302,3 +305,4 @@ collective.behavior.localregistry = 1.0b2
 
 zettwerk.mobile = 0.2.1
 zettwerk.mobiletheming = 0.2
+zettwerk.ui = 2.0
