--- a/themes.cfg
+++ b/themes.cfg
@@ -105,6 +105,7 @@ eggs =
     medialog.googlefonts
     collective.behavior.localdiazo
     collective.behavior.localskin
+    openmultimedia.headband
 
 ################# JQuery.ui's themeroller tools
     zettwerk.ui
@@ -267,6 +268,7 @@ plumber = 1.2
 #################### Theming tools
 collective.fontawesome = 1.0.2
 medialog.googlefonts = 1.3.1
+openmultimedia.headband = 1.0b1
 
 collective.cover = 1.0a9
 plone.tiles = 1.2
