Added more buildout format

--- a/themes.cfg
+++ b/themes.cfg
@@ -1,7 +1,7 @@
 [buildout]
 
 auto-checkout =
-############### Diazo themes
+################# Diazo themes
 #    chalkboardtheme_plone
     plonetheme.amherst
     plonetheme.aqueouslight
@@ -76,7 +76,7 @@ auto-checkout =
     diazotheme.skeleton
 #    diazotheme.startup
 
-############## Plone theme skins
+################# Plone theme skins
     quintagroup.theme.sunrain
     quintagroup.theme.schools
     quintagroup.theme.pythonreel
@@ -84,21 +84,22 @@ auto-checkout =
     plonetheme.drupal
     plonetheme.trantor
 
-########### Custom Diazo themes
+################# Custom Diazo themes
     plonetheme.changecenter
     plonetheme.unam
     plonetheme.zopeorg
 
-################ Theming tools
+################# Theming tools
 #    medialog.googlefonts
     Products.Doormat
 
 eggs = 
+################# Plone theme skins
     quintagroup.theme.estatelite
     quintagroup.theme.lite
     quintagroup.theme.techlight
     quintagroup.theme.whiteblack
-    
+
 ################# Theming tools
     collective.cover
     collective.fontawesome
@@ -117,7 +118,7 @@ eggs =
     zettwerk.mobile
 
 [sources]
-# Generic Diazo themes
+################# Generic Diazo themes
 #chalkboardtheme_plone = git https://github.com/tkimnguyen/chalkboardtheme_plone.git
 plonetheme.amherst = git https://github.com/collective/plonetheme.amherst.git
 plonetheme.aqueouslight = git https://github.com/collective/plonetheme.aqueouslight.git
@@ -148,7 +149,7 @@ plonetheme.transition = git https://github.com/gyst/plonetheme.transition.git
 plonetheme.woodexperience = git https://github.com/redomino/plonetheme.woodexperience.git
 plonetheme.yoko = git https://github.com/tisto/plonetheme.yoko.git
 
-# Beyondskins Diazo themes
+################# Beyondskins Diazo themes
 #beyondskins.brasilia = git https://github.com/simplesconsultoria/beyondskins.brasilia.git
 #beyondskins.phantasmagoria = git https://github.com/simplesconsultoria/beyondskins.phantasmagoria.git
 #beyondskins.happy = git https://github.com/simplesconsultoria/beyondskins.happy.git
@@ -160,7 +161,7 @@ beyondskins.responsive = git https://github.com/simplesconsultoria/beyondskins.r
 #beyondskins.lostkatana = git https://github.com/simplesconsultoria/beyondskins.lostkatana.git
 #beyondskins.minimalist = git https://github.com/simplesconsultoria/beyondskins.minimalist.git
 
-# Diazo theme with CSS Framework
+################# Diazo theme with CSS Framework
 diazotheme.amazium = git https://github.com/TH-code/diazotheme.amazium.git
 diazotheme.baseline = git https://github.com/TH-code/diazotheme.baseline.git
 diazotheme.bootstrap = git https://github.com/TH-code/diazotheme.bootstrap.git
@@ -175,7 +176,7 @@ diazotheme.purecss = git https://github.com/TH-code/diazotheme.purecss.git
 diazotheme.skeleton = git https://github.com/TH-code/diazotheme.skeleton.git
 #diazotheme.startup = git https://github.com/TH-code/diazotheme.startup.git
 
-# CSS Framework as Diazo resources
+################# CSS Framework as Diazo resources
 diazoframework.amazium = git https://github.com/TH-code/diazoframework.amazium.git
 diazoframework.baseline = git https://github.com/TH-code/diazoframework.baseline.git
 diazoframework.bootstrap = git https://github.com/TH-code/diazoframework.bootstrap.git
@@ -186,7 +187,7 @@ diazoframework.plone = git https://github.com/TH-code/diazoframework.plone.git
 diazoframework.purecss = git https://github.com/TH-code/diazoframework.purecss.git
 diazoframework.skeleton = git https://github.com/TH-code/diazoframework.skeleton.git
 
-# Others CSS Framework as Diazo resources
+################# Others CSS Framework as Diazo resources
 #diazotheme.frameworks = git https://github.com/TH-code/diazotheme.frameworks.git
 diazotheme.framework.cascade = git https://github.com/TH-code/diazotheme.framework.cascade.git
 diazotheme.framework.gumby = git https://github.com/TH-code/diazotheme.framework.gumby.git
@@ -195,7 +196,7 @@ diazotheme.framework.metro = git https://github.com/TH-code/diazotheme.framework
 diazotheme.framework.wirefy = git https://github.com/TH-code/diazotheme.framework.wirefy.git
 diazotheme.framework.yaml4 = git https://github.com/TH-code/diazotheme.framework.yaml4.git
 
-# Plone theme skins
+################# Plone theme skins
 quintagroup.theme.sunrain = git https://github.com/quintagroup/quintagroup.theme.sunrain.git
 quintagroup.theme.schools = git https://github.com/quintagroup/quintagroup.theme.schools.git
 quintagroup.theme.pythonreel = git https://github.com/quintagroup/quintagroup.theme.pythonreel.git
@@ -203,12 +204,12 @@ plonetheme.aclark_twitter = git https://github.com/collective/plonetheme.aclark_
 plonetheme.drupal = git https://github.com/sylvainb/plonetheme.drupal.git
 plonetheme.trantor = git https://github.com/tristanlt/plonetheme.trantor.git
 
-# Custom Diazo themes
+################# Custom Diazo themes
 plonetheme.changecenter = git https://github.com/collective/plonetheme.changecenter.git
 plonetheme.unam = git https://github.com/imatem/plonetheme.unam.git
 plonetheme.zopeorg = git https://github.com/d2m/plonetheme.zopeorg.git
 
-# Theming tools
+################# Theming tools
 medialog.googlefonts = svn http://svn.plone.org/svn/collective/medialog.googlefonts/trunk/
 Products.Doormat = git https://github.com/collective/Products.Doormat.git
 #ploomcake.theme_collection_accessibility = git https://github.com/ploomcake/ploomcake.theme_collection_accessibility.git
