--- a/themes.cfg
+++ b/themes.cfg
@@ -163,8 +163,10 @@ beyondskins.responsive = git https://github.com/simplesconsultoria/beyondskins.r
 
 ################# Diazo theme with CSS Framework
 diazotheme.amazium = git https://github.com/TH-code/diazotheme.amazium.git
-diazotheme.baseline = git https://github.com/TH-code/diazotheme.baseline.git
-diazotheme.bootstrap = git https://github.com/TH-code/diazotheme.bootstrap.git
+#diazotheme.baseline = git https://github.com/TH-code/diazotheme.baseline.git
+diazotheme.baseline = git https://github.com/Covantec/diazotheme.baseline.git
+#diazotheme.bootstrap = git https://github.com/TH-code/diazotheme.bootstrap.git
+diazotheme.bootstrap = git https://github.com/Covantec/diazotheme.bootstrap.git
 diazotheme.bootswatch = git https://github.com/TH-code/diazotheme.bootswatch.git
 #diazotheme.default = git https://github.com/TH-code/diazotheme.default.git
 diazotheme.foundation = git https://github.com/TH-code/diazotheme.foundation.git
@@ -178,7 +180,8 @@ diazotheme.skeleton = git https://github.com/TH-code/diazotheme.skeleton.git
 
 ################# CSS Framework as Diazo resources
 diazoframework.amazium = git https://github.com/TH-code/diazoframework.amazium.git
-diazoframework.baseline = git https://github.com/TH-code/diazoframework.baseline.git
+#diazoframework.baseline = git https://github.com/TH-code/diazoframework.baseline.git
+diazoframework.baseline = git https://github.com/Covantec/diazoframework.baseline.git
 diazoframework.bootstrap = git https://github.com/TH-code/diazoframework.bootstrap.git
 diazoframework.foundation = git https://github.com/TH-code/diazoframework.foundation.git
 diazoframework.goldilocks = git https://github.com/TH-code/diazoframework.goldilocks.git
