Separate versions in the "versions.cfg" file

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,6 +9,7 @@ extensions =
 extends =
     http://dist.plone.org/release/4.3-latest/versions.cfg
     themes.cfg
+    versions.cfg
 
 find-links =
     http://dist.plone.org/release/4.3-latest/
